--- a/index.html
+++ b/index.html
@@ -26,14 +26,19 @@
     <div id="text-cor"></div> <!-- Cor do produto -->
     <div id="text-semjuros"></div> <!-- Valor de vezes sem juros -->
     <div id="text-center"></div> <!-- Valor do Produto  -->
+    <div id="text-avista"></div> <!-- Valor Avista -->
+    <div id="text-cartao"></div> <!-- Valor no Cartão -->
+    <div id="text-validade"></div> <!-- Validade da oferta -->
   </div>
   </div>
   <textarea id="text-input-prod" placeholder="PROD"></textarea> <!-- Inserindo o Produto -->
-  <textarea id="text-input-cod" placeholder="COD"></textarea> <!-- Inserindo o código produto -->
-  <textarea id="text-input-cor" placeholder="COR"></textarea> <!-- Inserindo cor do produto -->
+  <textarea id="text-input-cod" placeholder="COD">CODIGO:</textarea> <!-- Inserindo o código produto -->
+  <textarea id="text-input-cor" placeholder="COR">COR:</textarea> <!-- Inserindo cor do produto -->
   <textarea id="text-input-semjuros" placeholder="Sem juros"></textarea> <!-- Inserindo quantas vezes sem juros -->
   <textarea id="text-input" placeholder="Digite seu texto central"></textarea> <!-- Inserindo o valor depois da divisão sem juros -->
-  
+  <textarea id="text-input-avista" placeholder="Valor Avista"></textarea>
+  <textarea id="text-input-cartao" placeholder="Valor no cartão"></textarea>
+  <input type="date" id="text-input-validade">  
   <button id="btn-escrever">Enviar</button> <!-- Botão para registrar as informações -->
   
   <script src="script.js"></script> <!-- Ligação com JavaScript -->
