--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <link rel="stylesheet" href="./style-textos.css">
-  <link
+  <head>
+    <link rel="stylesheet" href="./style-textos.css" />
+    <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
@@ -12,35 +12,51 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css"
     />
-  <title>Escrever em Imagem</title>
-  <style>
-  </style> 
-</head>
-<body>
-  <input type="file" id="image-upload" accept="image/*">
-  <div id="image-container">
-    <img src="" alt="Imagem" id="imagem">
-    <div class="card-img-overlay"> <!-- Sobrescrever imagem-->
-    <div id="text-prod"></div> <!-- Nome do produto -->
-    <div id="text-cod"></div> <!-- Código do produto -->
-    <div id="text-cor"></div> <!-- Cor do produto -->
-    <div id="text-semjuros"></div> <!-- Valor de vezes sem juros -->
-    <div id="text-center"></div> <!-- Valor do Produto  -->
-    <div id="text-avista"></div> <!-- Valor Avista -->
-    <div id="text-cartao"></div> <!-- Valor no Cartão -->
-    <div id="text-validade"></div> <!-- Validade da oferta -->
-  </div>
-  </div>
-  <textarea id="text-input-prod" placeholder="PROD"></textarea> <!-- Inserindo o Produto -->
-  <textarea id="text-input-cod" placeholder="COD">CODIGO:</textarea> <!-- Inserindo o código produto -->
-  <textarea id="text-input-cor" placeholder="COR">COR:</textarea> <!-- Inserindo cor do produto -->
-  <textarea id="text-input-semjuros" placeholder="Sem juros"></textarea> <!-- Inserindo quantas vezes sem juros -->
-  <textarea id="text-input" placeholder="Digite seu texto central"></textarea> <!-- Inserindo o valor depois da divisão sem juros -->
-  <textarea id="text-input-avista" placeholder="Valor Avista"></textarea>
-  <textarea id="text-input-cartao" placeholder="Valor no cartão"></textarea>
-  <input type="date" id="text-input-validade">  
-  <button id="btn-escrever">Enviar</button> <!-- Botão para registrar as informações -->
-  
-  <script src="script.js"></script> <!-- Ligação com JavaScript -->
-</body>
+    <title>Escrever em Imagem</title>
+    <style></style>
+  </head>
+  <body>
+    <p>Teste</p>
+    <input type="file" id="image-upload" accept="image/*" />
+    <div id="image-container">
+      <img src="" alt="Imagem" id="imagem" />
+      <div class="card-img-overlay">
+        <!-- Sobrescrever imagem-->
+        <div id="text-prod"></div>
+        <!-- Nome do produto -->
+        <div id="text-cod"></div>
+        <!-- Código do produto -->
+        <div id="text-cor"></div>
+        <!-- Cor do produto -->
+        <div id="text-semjuros"></div>
+        <!-- Valor de vezes sem juros -->
+        <div id="text-center"></div>
+        <!-- Valor do Produto  -->
+        <div id="text-avista"></div>
+        <!-- Valor Avista -->
+        <div id="text-cartao"></div>
+        <!-- Valor no Cartão -->
+        <div id="text-validade"></div>
+        <!-- Validade da oferta -->
+      </div>
+    </div>
+    <textarea id="text-input-prod" placeholder="PROD"></textarea>
+    <!-- Inserindo o Produto -->
+    <textarea id="text-input-cod" placeholder="COD">CODIGO:</textarea>
+    <!-- Inserindo o código produto -->
+    <textarea id="text-input-cor" placeholder="COR">COR:</textarea>
+    <!-- Inserindo cor do produto -->
+    <textarea id="text-input-semjuros" placeholder="Sem juros"></textarea>
+    <!-- Inserindo quantas vezes sem juros -->
+    <textarea id="text-input" placeholder="Digite seu texto central"></textarea>
+    <!-- Inserindo o valor depois da divisão sem juros -->
+    <textarea id="text-input-avista" placeholder="Valor Avista"></textarea>
+    <textarea id="text-input-cartao" placeholder="Valor no cartão"></textarea>
+    <input type="date" id="text-input-validade" />
+    <button id="btn-escrever">Enviar</button>
+    <!-- Botão para registrar as informações -->
+
+    <script src="script.js"></script>
+    <!-- Ligação com JavaScript -->
+  </body>
 </html>
